--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="title">
       <!-- EDIT HERE -->
       <h3 class="STARDUST1">2024</h3>
-      <h1 class="STARDUST2">TRAMIUDAYY &amp; NDP</h1>
+      <h1 class="STARDUST2">TRAMIUDAYY &amp; Jacob Elordi</h1>
       <img
         class="img"
         src="419831354_789937206493812_268130464318640610_n.jpg"
